bugfix: removed local font declaration
this was causing the font to look wrong, if not the right version of inter installed for example

--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -10,7 +10,7 @@
 
 @font-face {
     font-family: Inter;
-    src: local('Inter'), url('/fonts/inter.woff2') format('woff2');
+    src: url('/fonts/inter.woff2') format('woff2');
     font-weight: 1 999;
     font-display: swap;
     font-feature-settings: 'ss01', 'ss02', 'case';
